# Based on:
# https://github.com/colcon/colcon-bundle/
# https://github.com/colcon/colcon-test-result

[metadata]
name = colcon-package
version = attr: colcon_package.__version__
author = Vornichev Dmitriy
author_email = vornichev@elins.ru
maintainer = Vornichev Dmitriy
maintainer_email = vornichev@elins.com
classifiers =
  Development Status :: 1 - Alpha
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Operating System :: MacOS
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX
  Programming Language :: Python
  Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Plugin to bundle built software for the colcon command line tool
long_description = file: README.rst
keywords = colcon

[options]
python_requires = >=3.5
install_requires =
  colcon-core
packages = find:
tests_require =
  flake8
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pyenchant
  pylint
  pytest
  pytest-cov
  pytest-asyncio
zip_safe = true
include_package_data = true

[options.entry_points]
colcon_core.verb =
  package = colcon_package.colcon_package:PackageVerb

[options.packages.find]
exclude =
  test
  test.*

[aliases]
test = pytest

[tool:pytest]
junit_suite_name = colcon-package

[flake8]
import-order-style = google
